@@ -6,6 +6,7 @@ v3.0.7
  * Feature      PT-633 : Added --mysql-only option to pt-stalk for RDS
  * Fixed bug    PT-1256: pt-table-sync does not use the character set for the table it is synchronizing
  * Fixed bug    PT-1455: pt-osc is stuck when the table that is being altered is filtered out in the slave
+ * Fixed bug    PT-1485: pt-mysql-summary has broken Security section in versions bigger then 5.6
  * Fixed bug   PMM-1905: Explain fails if encounters negative "ntoreturn"
 
 v3.0.6 released 2017-12-20
